Fix series length dropdowns not showing on semifinals.html

--- a/views/semifinals.html
+++ b/views/semifinals.html
@@ -25,6 +25,13 @@
                 <select name="east1" id="east1">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="eastSeries1" id="eastSeries1">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <div class="matchup">
                 <span id="east2-team1" class="team-with-logo">
@@ -37,6 +44,13 @@
                 </span>
                 <select name="east2" id="east2">
                     <option value="" disabled selected>Select WINNER</option>
+                </select>
+                <select name="eastSeries2" id="eastSeries2">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
                 </select>
             </div>
             <h3>Western Conference Semifinals</h3>
@@ -52,6 +66,13 @@
                 <select name="west1" id="west1">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="westSeries1" id="westSeries1">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <div class="matchup">
                 <span id="west2-team1" class="team-with-logo">
@@ -65,11 +86,18 @@
                 <select name="west2" id="west2">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="westSeries2" id="westSeries2">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <button type="button" onclick="window.location.href='/firstround_west.html'">Previous</button>
             <button type="submit">Next</button>
         </form>
     </div>
-    <script src="/scripts/semifinals.js"></script>
+    <script src="/scripts/semifinals.js" defer></script>
 </body>
 </html>
