Resolve merge conflicts after pull

--- a/views/playin.html
+++ b/views/playin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="/images/nba-pool-logo.png" alt="NBA Pool Logo" class="logo" loading="lazy">
-        <h1>BIENVENIDOS AL POOL NBA 2025</h1>
+        <h1>POOL NBA 2025</h1>
         <h2>Step 2 of 7</h2>
         <h2>PLAY-IN TOURNAMENT SELECTION</h2>
         <form id="playin-form">
